<?xml version="1.0"?>
<package>
  <name>hku_m100_description</name>
  <version>0.0.0</version>
  <description>The hku_m100_description package</description>

  <maintainer email="caochao@todo.todo">caochao</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hector_sensors_description</run_depend>
  <run_depend>hector-xacro-tools</run_depend>

</package>